# MCP-WebSearch

./: .env.local  .gitignore  README.md  docker-compose.yaml  docker-compose.yml  dockerfile  main.py  pyproject.toml
.github/workflows/: docker.yml  tests.yml
searxng/: settings.yml
src/mcp_searxng/config/: settings.py
src/mcp_searxng/searxng/: search.py
src/mcp_websearch/: runner.py
src/mcp_websearch/firecrawl/: firecrawl_search.py
src/mcp_websearch/searxng/: searxng_search.py
tests/: test_client.py
