[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "mcp_websearch"
version = "1.0.1"
requires-python = ">=3.10, <3.14"
description = "mcp for web search"
readme = "README.md"
license = "Apache-2.0"

authors = [
  { name = "Xuan‑You Lin", email = "a0985821880@gmail.com" }
]
maintainers = [
  { name = "Xuan‑You Lin", email = "a0985821880@gmail.com" }
]

dependencies = [
  "pydantic",
  "python-dotenv",
  "fastmcp",
  "langchain_community",
  "httpx",
]

[dependency-groups]
test = [
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
]
dev = [
  { include-group = "test" },
  "ipykernel",
  "ipywidgets",
  "nest_asyncio",
  "jupyterlab_widgets",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q", 
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "--tb=short"
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "mcp: marks tests related to MCP functionality", 
    "api: marks tests related to API functionality",
    "docker: marks tests that require Docker",
    "network: marks tests that require network access",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2
show_missing = true